# Tutor_LS

./: .gitignore  pyproject.toml
app/: main.py  websocket.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css
frontend/src/components/: Camara.jsx  GuiaAbecedario.jsx  RetoDeletreo.jsx  VisualizadorLetra.jsx
frontend/src/hooks/: useMediaPipe.js
frontend/src/pages/: Aprender.jsx  Retos.jsx
ml/: entrenar.py  evaluar.py
ml/salidas/: mapeo_clases.json  modelo_asl.keras  reporte_clasificacion.txt
