[project]
name = "tutor-ls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "numpy>=2.0",
    "pytest>=8.0",
    "httpx>=0.27.0",
    "tensorflow>=2.16",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
]
